Fixed the style behind the padding and margin issue

--- a/Design System/stylesheet.css
+++ b/Design System/stylesheet.css
@@ -438,12 +438,12 @@ h2{font-size: 2.8rem;}
     color: whitesmoke;
   }
   .div-padding, .containers-padding{
-    border: 16px solid #FE9C00;
+    border-top: 16px solid #FE9C00;
+    border-bottom: 16px solid #FE9C00;
     background-color: #191b1a;
     color: whitesmoke;
   }
   .images-padding{
-    border: 12px solid #FE9C00;
     background-color: #191b1a;
     color: whitesmoke;
   }
@@ -463,17 +463,20 @@ h2{font-size: 2.8rem;}
   color: whitesmoke;
 }
 .containers-margin{
-  border: 32px solid #191b1a;
+  border-top: 32px solid #191b1a;
+  border-bottom: 32px solid #191b1a;
     background-color: #FE9C00;
     color: whitesmoke;
 }
 .div-margin{
-  border: 48px solid #191b1a;
+  border-top: 48px solid #191b1a;
+  border-bottom: 48px solid #191b1a;;
     background-color: #FE9C00;
     color: whitesmoke;
 }
 .images-margin, .buttons-margin{
-  border: 24px solid #191b1a;
+  border-top: 24px solid #191b1a;
+  border-bottom: 24px solid #191b1a;
     background-color: #FE9C00;
     color: whitesmoke;
 }
